--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 SECRET_KEY=your-secret-key-here-generate-a-new-one
 
-DEBUG=
+DEBUG=True
 
-ALLOWED_HOSTS=
+ALLOWED_HOSTS=localhost,127.0.0.1
 
 
 
-POSTGRES_DB=
+POSTGRES_DB=postgres_db
 
-POSTGRES_USER=
+POSTGRES_USER=postgres_user
 
-POSTGRES_PASSWORD=
+POSTGRES_PASSWORD=postgres_password
 
-DB_HOST=
+DB_HOST=db
 
-DB_PORT=
+DB_PORT=5432
