--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ SECRET_KEY=your-secret-key-here-generate-a-new-one
 
 DEBUG=True
 
-ALLOWED_HOSTS=localhost,127.0.0.1
+ALLOWED_HOSTS=localhost,127.0.0.1, 5.129.249.176
 
 
 
